assets/css/jr-styles.css
/* COLORS
    GOLD:   #B88E52     rgba(184,142,82,.6)
*/
/* == MAIN STYLES == */
html, body{
    height: 100%;
}

section{
    margin:0px;
    min-height: 600px;
    /*border: medium solid black;*/
}

blockquote{
    font-size: 24px;
    margin-left: 20px;
    padding-left: 10px;
    border-left: thick solid #d4bb97;
    box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);/
	-webkit-box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);
	-moz-box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);
    background-color: #997379;
}
.page-section{
    margin:0px;
    /*border: medium solid black;*/
    padding: 15px;
}
.pre-footer-content{
    height: 90%;
    z-index: -1;
}
/* HELPER STYLES */
.vertical-align-parent{
    position: relative;
}
.vertical-align-child{
    position: absolute;
      position:absolute;
    width:100%;
    top:50%;
     -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
      transform: translateY(-50%);
}

.wedding-main-text, .annoucement-text {
    
    font-family: 'Prata', serif;
}

/* === NAV STYLES === */
.nav-link-separator{
    color: red;
    
}
#navbar-site-top .nav-link{
    color: white;
    
}
#navbar-site-top{
    background-color: rgba(1,1,1,0);
}
#navbar-site-top ul {
    width: 35%;
    margin: 0 auto;
}
#navbar-site-top {
    background-color: rgba(255,255,255,.5);
   background-color: rgba(184,142,82,.6);
    box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);/
	-webkit-box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);
	-moz-box-shadow: 0px 10px 8px rgba(0, 0, 0, .4);
}

#navbar-site-top li {
   font-weight: bold;
    font-size: 16px;
}
#navbar-site-top .nav-link {
   font-weight: bold;
    font-size: 16px;
     color:gold;
}


/* === COVER MAIN STYLES === */
#cover-main{
   min-height:800px;
   background: url('../img/bg/rings-focused-bg-blurred.jpeg') no-repeat;
   background-size: cover;
   background-position:  left;
    padding:0px;
}

 #cover-main, #cover-main .container-fluid{
   
    height:100%;
}
#cover-main .container-fluid{
    position:relative;
}
#cover-main .cover-img-row{
    position:absolute;
    width:100%;
    top:50%;
    -webkit-transform: translateY(-30%);
    -ms-transform: translateY(-30%);
    -o-transform: translateY(-30%);
    transform: translateY(-40%);
    opacity: 1;
}

.cover-couple-img{
    width:100%;
    box-shadow: 0 0 5px 5px #888;
    border: medium solid lightGray;
    
    border-radius: 100%;
}
.cover-img-float{
    position:absolute;
}
#float-img-wrapper-1{
    left:0;
    top:0;
    transform:translate(-65%,-45%);
    
    min-height:100px;
}
#float-img-2{
    width:200px;
}

#float-img-wrapper-2{
    left:0;
    top:0;
    transform:translate(-190%,-10%);
    
    height:100px;
}



.cover-img-wrapper{
    position:relative;
    
/*     height: 500px;
    box-shadow:10px 10px 10px 0px white inset;
    border-radius:100%*/
}


.heart {
  background-color: red;
  display: inline-block;
  height: 30px;
  margin: 0 10px;
  position: relative;
  top: 0;
  transform: rotate(-45deg);
  width: 30px;
}

.heart:before,
.heart:after {
  content: "";
  background-color: red;
  border-radius: 50%;
  height: 30px;
  position: absolute;
  width: 30px;
}

.heart:before {
  top: -15px;
  left: 0;
}

.heart:after {
  left: 15px;
  top: 0;
}

/* === COUPLE INFO === */
#about-couple-main{
    padding:0px;
    border: thin solid rgba(184,142,82,1);
}


.section-header  {
    font-family: 'Dancing Script', cursive;
    /*font-family: 'Tangerine', cursive;*/

    
}

.section-header.dark-text {
     text-shadow: 2px 2px #D3D3D3;
    
}
.section-header.light-text {
     text-shadow: 2px 2px #7e7e7e;
    
}

.couple-bg-row{
    padding-top: 40px;
    padding-bottom:25px
}
.couple-info-card .card-block, .couple-info-card .card-block .card-link{
    color:white;
}
    
#bride-bg-row{
    background: url('../img/bg/cleopatra.jpeg') no-repeat;
    background-size: cover;
    border-right: thin solid rgba(184,142,82,1);
}
#groom-bg-row{
     background: url('../img/bg/king-smoke.jpeg') no-repeat;
    background-size: cover;
     border-left: thin solid rgba(184,142,82,1);
}
.couple-info-card{
    background-color: rgba(184,142,82,.6) ;
}
.couple-info-card .card-title, .couple-info-card .card-subtitle{
   color: white;
}
.couple-info-card .card-block.info-header{
    text-align: center;
    background-color: rgba(255,105,180,.1);
   /* background: url('../img/bg/cleopatra.jpeg');*/
}

.couple-thumbnail-single{
    width: 200px;
    height: 200px;
    margin-top: 10px;
     box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
}

.couple-gallery-carousel  img{
    display: block;
  width: 100%;
  height: auto;
    border: thick solid #B88E52 ;
    box-shadow: 10px 10px 5px #888888;
}

.card-subtitle{
    
    font-family: 'Prata', serif;
}
.card .card-sub-subtitle{
    font-size: 40px;
    font-family: 'Tangerine', cursive;
         
}

.thick-hr{
    border-top: 3px solid rgba(0,0,0,.1);
}
/* === LOCATION MAIN STYLES === */
#location-main{
   background: url('../img/sand-footsteps-large.jpg') left no-repeat;
    background-size: cover;
    padding: 30px;
}
#location-carousel-main{
  
}
#location-info-content{
    background: rgba(255,255,255,.3);
    border-radius: 10px;
    padding: 25px;
}
#location-main .bg-overlay{
   background: rgba(0,0,0,.5);
    border-radius:5px;
    padding: 30px;
    color:white;
}

#rates-table-wrapper-main{
    padding: 5px;
    border: medium solid rgba(255,255,255,.5);
    border-radius:5px;
}
#rate-info-wrapper{
    padding-left: 15px ;
    background: rgba(184,142,82,.6);
    border-radius: 5px;
}

/* === GALLERY MAIN STYLES === */

#gallery-main-1{
    border-top: thick solid pink;
    background: url('../img/bg/clouds.jpeg') no-repeat ;
   background-attachment: fixed;
    background-size: cover;    
     background-position: bottom bottom;
    
}

#gallery-main-1 .bg-overlay{
    background-color: rgba(255,255,255,.4);
    padding:20px;
    height: 100%;
    width:100%;
        
}

.couple-gallery-carousel .item {
  margin: 20px;
}



#gallery-main{
  /*  background: url('../img/bg/film-roll.jpeg');*/
   /* background: url('../img/bg/blurred-gold.jpeg');*/
    
}
.picture-frame{
    background: url('../img/empty-picture-frame.jpg') no-repeat;
    background-size:cover;
    height:350px;
    width:500px;
    position: relative;
}
.gallery-slider-img{
}
.gallery-slider-img{
    position: absolute;
     height:200px;
    width: 345px;
    right: 15.5%;
      top: 50%;
      -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
      transform: translateY(-50%);
}


/* === BRIDAL PARTY STYLES === */
#bridal-party-main{
    background: url('../img/bg/pink_rice.png')
}

.bridal-party-thumbnail{
     width: 150px;
    height:150px;
     box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
    margin-bottom: 1.5rem;
    
}
.bridal-party-title span{
    border-top: medium solid rgba(1, 0, 0, .3);
    border-bottom: medium solid rgba(0, 0, 0, .4);
    
    
}
#bridesmaids-main{
    background: url('../img/bg/wedding-party-glasses.jpeg') no-repeat;
   background-size: cover;
    padding: 0px;
}
#bridesmaids-main .section-header{
    color: white;
}


#bridesmaids-main  .bg-overlay{
    background-color: rgba(255,255,255,0.5);
    min-height: 100px;
    border-radius: 5px;
}


.circular {
	width: 300px;
	height: 300px;
	border-radius: 150px;
	-webkit-border-radius: 150px;
	-moz-border-radius: 150px;
	background: url('../img/bahia1.jpg') no-repeat;
    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
	}

.circular img {
	opacity: 0;
	filter: alpha(opacity=0);
	}

/* === RSVP MAIN STYLES === */
#rsvp-main{
    /*background: url('../img/couple/club-night-kiss.jpg');*/
    background-size: cover;
    padding:35px;
    position:relative;
        padding-left:0px;
    padding-right:0px;
    
}
#rsvp-main .card {
    border: thick solid pink;

}

#rsvp-main .section-header {
   padding-top:12px;
}
#rsvp-main .color-stripe {
   position:absolute;
    height:300px;
    width:100%;
    background-color: #B88E52;
    top:50%;
     -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
      transform: translateY(-50%);
}

/* === FOOTER STYLES === */

    /* MAKE FOOTER STICK TO THE BOTTOM AND STYLE */

#footer-spacer, #footer-main{
    width: 100%;
    height: 100px;
}
        #footer-main{
           position: fixed;
            bottom: 0;
            left:0; 
            float:left;

    }
    #clock{
        width:100%;
        height:100%;
}
     #timer-header{
        width:30%;
        height:100%;
        background:#585858;
        margin:0px;
         padding: 0px;
         font-family: 'Tangerine', cursive;
         font-size:54px;
        line-height: 100px; /* -- SAME HEIGHT AS #footer-main -- */
    }
    .timer-block{
        color:white;
        width:14%;
        height:100%;
        display: inline-block;
        margin: 0px;
        padding: 0px;
        font-size:32px;
        float:left;
        text-align:center;
    font-family: 'Dancing Script', cursive;
    font-family: 'Kaushan Script', cursive;
    font-family: 'Prata', serif;    
    }
.timer-block span{
        font-size:38px;
    font-family: 'Tangerine', cursive;

    font-weight:00;
    }
    #timer-weeks{
       background: #a57f49; /* For browsers that do not support gradients */
      
    }
    #timer-days{
       background: #bf9963; /* For browsers that do not support gradients */
      
    }
    #timer-hours{
       background: #c6a474; /* For browsers that do not support gradients */
      
    }
    #timer-min{
       background: #cdaf85; /* For browsers that do not support gradients */
      
    }
    #timer-sec{
       background: #d4bb97; /* For browsers that do not support gradients */
      
    }

